# sem11-computer-graphics-hw01

./: .clangd  .gitignore  CMakeLists.txt  gen_hexdumps.cmake
src/cpp/: .gitignore  gl.hpp  main.cpp  raii.hpp  shader_sources.hpp.in
src/glsl/: shader.frag  shader.vert
